fix: example markdown

--- a/events/order/{order_id}/created/v1.md
+++ b/events/order/{order_id}/created/v1.md
@@ -1,4 +1,22 @@
-Example
+# Event: user.{user_id}.created
+**Version**: 1
+
+## Description
+_TODO: Describe what this event represents._
+
+## Subject
+`user.{user_id}.created`
+
+## Produced By
+_TODO: Add the service that emits this event._
+
+## Consumed By
+- _TODO: List services that consume this event_
+
+## Payload Schema
+See [v1.schema.json](./v1.schema.json)
+
+## Example Payload
 ```json
 {
   "metadata": {
